# CurlDemo

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sherlockshi/curldemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/sherlockshi/curldemo/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sherlockshi/curldemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
